# crossos

./: .gitignore  ANDROID_OPTICAL_DEBUG_GUIDE.md  CMakeLists.txt  OPTICAL_DETECTION_RESOLUTION.md  README.md  UNFINISHED_FEATURES.md  test_terminal_backend.c
.devcontainer/: devcontainer.json  install-deps.sh
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_hello_main.c  android_main.c  android_scanner_main.c
android/app/src/main/java/io/crossos/hello/: CrossOSNativeActivity.java  CrossOSUsbBurner.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: usb_device_filter.xml
applications/disc_burner/: iso_image.h
applications/easy_raw/: CMakeLists.txt  main.c  raw_decode.c  raw_decode.h  raw_process.c  raw_process.h
applications/film_scanner/: main.c
artifacts/: crossos-android-arm64-v8a.tgz  crossos-android-hello-world-arm64-v8a.tgz
artifacts/android-apk/: crossos-hello-debug.apk
artifacts/android-arm64/: hello_world.arm64
cmake/: toolchain-mingw64.cmake
examples/disc_burner/: CMakeLists.txt  iso_image.c  main.c
examples/film_scanner/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.c
include/crossos/: audio.h  bluetooth.h  camera.h  crossos.h  dialog.h  display.h  draw.h  file.h  font.h  image.h  input.h  msgqueue.h  optical.h  render.h  scanner.h  telemetry.h  types.h  ui.h  web.h  websocket.h  window.h
scripts/: build_all.sh
server/: crossos_analytics.php
src/core/: audio.c  bluetooth.c  camera.c  dialog.c  draw.c  file.c  font.c  image.c  init.c  msgqueue.c  optical.c  render.c  scanner.c  telemetry.c  ui.c  web.c  web_backend.h  web_backend_curl.c  web_backend_fallback.c  websocket.c
src/platform/android/: android_internal.h  bluetooth_android.c  camera_android.c  font_android.c  input_android.c  optical_android.c  render_egl.c  scanner_android.c  window_android.c
src/platform/linux/: bluetooth_linux.c  camera_linux.c  font_linux.c  input_x11.c  linux_backend.h  linux_dispatch.c  render_glx.c  scanner_sane.c  terminal_backend.c  terminal_ui_backend.c  window_x11.c  x11_internal.h
src/platform/windows/: bluetooth_win32.c  camera_win32.c  font_win32.c  input_win32.c  render_wgl.c  scanner_twain.c  window_win32.c
tests/: CMakeLists.txt  test_network.c  test_renderer.c  test_types.c
